z-index box and fixed blend issue

--- a/src/assets/style/Match/match.scss
+++ b/src/assets/style/Match/match.scss
@@ -194,6 +194,7 @@ body{
         }
     }
     .table{
+        z-index:4 ;
         bottom: 10%;
         margin-left: 10vw;
         @include devices(TV) {
